# pypbtdcev-chile

./: LICENSE  README.md  pyproject.toml
pruebas/: clonar_planilla.py
src/pypbtdcev/: escritor.py  lector.py
src/pypbtdcev/plantillas/: 02.-PBTD-Motor-de-cálculo-v2.2.xlsm  03.-PBTD-Datos-de-Equipos-y-Resultados-v2.2.xlsm  cambiar-versión-PBTD-01.xlsm
